k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assetmanagement-web
  namespace: assetmanagement
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: assets.90.147.174.30.myip.cloud.infn.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assetmanagement-web
                port:
                  number: 80
  tls:
    - hosts:
        - assets.90.147.174.30.myip.cloud.infn.it
      secretName: assetmanagement-web-tls
